# voxmaestro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  schema.json
.github/workflows/: ci.yml  test.yml
examples/: real_estate_agent.yaml
src/voxmaestro/: __init__.py  __main__.py  analytics.py  conductor.py  diagram.py  schema.json  server.py  training.py
src/voxmaestro/integrations/: __init__.py  bland.py  irelop.py  pipecat.py
tests/: conftest.py  test_analytics.py  test_bland.py  test_cli.py  test_conductor.py  test_diagram.py  test_irelop.py  test_pressure.py  test_server.py  test_training.py
