[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "voxmaestro"
version = "0.1.0"
description = "The open source voice agent conductor — real-time conversation orchestration for AI voice agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gentic AI Solutions" },
]
keywords = ["voice-ai", "agent", "orchestration", "pipecat", "tts", "stt", "conversation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pipecat = ["pipecat-ai>=0.0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = ["voxmaestro[pipecat,dev]"]

[project.urls]
Homepage = "https://github.com/gentic-ai/voxmaestro"
Documentation = "https://voxmaestro.dev"
Repository = "https://github.com/gentic-ai/voxmaestro"
Issues = "https://github.com/gentic-ai/voxmaestro/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
